- Dossiers : Inversion des bouton non lu et parcourir pour alignement plus logique - Dossiers :Inversion bouton parcourir et bouton de pliage/dépliage - Description la manip de mise à jour (sauvegarde de la base donnée) dans le README - Bouton "lu/non lu" de chaque news soit positionné à un endroit fixe
git-svn-id: http://projet.idleman.fr/leed.svn@49 cbb609ad-8cd9-463b-aa97-3ec7c4f0f680

--- a/css/style.css
+++ b/css/style.css
@@ -528,6 +528,9 @@ footer a,#main aside a{
 .left{
 	float:left;
 }
+.right{
+	float:right;
+}
 .clear{
 	clear:both;
 }
